# ECC-LDPC-application

./: README.html  README.md
GUI/: .gitignore  Demo.qml  Graph.qml  Graph.ui.qml  H_n648-z27-r1_2.alist  H_n648-z27-r3_4.alist  Info.qml  Iterations.qml  Iterations_bitflip.qml  LDPC.pro  LDPC_app_base.cpp  LDPC_app_base.h  LDPC_beliefprop.cpp  LDPC_beliefprop.h  LDPC_bitflip.cpp  LDPC_bitflip.h  LDPC_encode.h  LDPC_info.h  Settings.ui.qml  alist.cpp  alist.h  awgn.cpp  awgn.h  datasource.cpp  datasource.h  main.cpp  main.qml  qml.qrc  resourceimageprovider.cpp  resourceimageprovider.h
cpp/: CMakeLists.txt  alist.cpp  alist.h  beliefprop.cpp
cpp/src/: CMakeLists.txt  LDPC_app_base.cpp  LDPC_app_base.h  LDPC_beliefprop.cpp  LDPC_beliefprop.h  LDPC_encode.cpp  LDPC_info.h  alist.cpp  alist.h  awgn.cpp  awgn.h  beliefprop.cpp  bpsk.cpp  bpsk.h  test.cpp
cpp/test/: CMakeLists.txt  test.cpp  test_H.h  test_U.h  test_alist.cpp  test_awgn.cpp  test_bpsk.cpp  test_ldpc_app_base.cpp  test_ldpc_beliefprop.cpp  test_ldpc_bitflip.cpp  test_ldpc_encode.cpp
ldpc-matrix-prototypes/: n648-z27-r1_2.txt  n648-z27-r2_3.alist  n648-z27-r2_3.txt  n648-z27-r3_4.txt  n648-z27-r5_6.alist  n648-z27-r5_6.txt
matlab/awgn/: bpskAWGN.m
matlab/generator/: beliefprop.m  bitflip.m  gen.m
python/app/: routes.py
python/app/static/css/: sb-admin-2.css
python/app/static/js/: morris-data.js  tanner.js
python/app/templates/: base.html  index.html
scripts/: standard2alist.py
